{
    "name": "PlayerInputAsset",
    "maps": [
        {
            "name": "level",
            "id": "1e386ca4-e32b-40f8-a3ba-75b278b52d41",
            "actions": [
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "a117ff17-83cd-4d91-b7cb-40a9066b56b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "run",
                    "type": "Value",
                    "id": "e869ef1d-f257-4281-b932-c2bb8d25373d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "shoot_platform",
                    "type": "Button",
                    "id": "0f76aedd-bab4-4e73-82d5-72382af74ac7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f05a176-c4e2-4c8e-970b-3656ddd7ebd1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7979a0f3-aab7-4558-ace0-e9d6cf955d72",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KeyboardLeftRight",
                    "id": "ad10d072-1b9d-4275-ba41-31a2941567f3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9dea84cc-e967-4bd7-935c-d49d7bde37e2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "a1d59df9-c612-4e77-ba41-51e12ea7e87b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6ff53133-afd5-4d48-a708-d96194041a8f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5ba72c3c-49b5-498f-9f2c-1e2514f58a4a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LJoystick",
                    "id": "ad2a4e77-c22c-4bfd-a9e7-c9fbe94a212c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4580c7f2-7d1e-401c-90ab-47ac31f0dd4d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4922f091-7e71-4a71-a84c-05fef9c3c58c",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c087cd6f-91a8-438a-9d7e-6d9f9a1fb1cb",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "shoot_platform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba7bafd3-7432-4821-b5ba-023625845de4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "shoot_platform",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "debug",
            "id": "88f05485-9a1f-4377-b415-0c56111cdf38",
            "actions": [
                {
                    "name": "RecordPath",
                    "type": "Button",
                    "id": "3f4c2612-2777-4619-963d-9e759b72ee97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearPath",
                    "type": "Button",
                    "id": "e135ad68-eb2d-4e90-b8e6-a52fef65a88c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5ba23c4-095e-437e-9f35-4ffa283c59d9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "RecordPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "745c4205-4011-4f38-a9a6-3d8104be169e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "RecordPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9590cb56-d2ea-4836-8d32-5586a9fbd2a3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "controller",
                    "action": "ClearPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc6151c5-3766-4e9a-a4b7-0758f78b2b6c",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "ClearPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard",
            "bindingGroup": "keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "controller",
            "bindingGroup": "controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}